--- a/计算机组成原理.md
+++ b/计算机组成原理.md
@@ -1502,3 +1502,29 @@ ID：对IR中指令进行译码
 
 ## 第六章 总线
 
+### 6.1 总线概述
+
+#### 6.1.1 总线的基本概念
+
+#### 6.1.2 系统总线的结构
+
+#### 6.1.3 总线仲裁
+
+#### 6.1.4 典型的总线标准
+
+### 6.2 总线信息传输
+
+#### 6.2.1 总线的操作
+
+#### 6.2.2 信息传输方式
+
+#### 6.2.3 总线定时方式
+
+### 6.3 总线仲裁
+
+#### 6.3.1 总线仲裁的概念
+
+#### 6.3.2 总线仲裁方式
+
+
+
