--- a/计算机组成原理.md
+++ b/计算机组成原理.md
@@ -1484,7 +1484,7 @@ ID：对IR中指令进行译码
 
    后续指令需要前面指令的数据结果
 
-3. 控制相关
+3. 控制相关 
 
    在遇到条件转移指令时要判断是循序执行还是进行跳转
 
@@ -1504,27 +1504,197 @@ ID：对IR中指令进行译码
 
 ### 6.1 总线概述
 
+在计算机中各部分之间的部分之间相互连接，部分之间有两种一种是各部分之间通过独立的连线互联，称为分散连接，另一种是将多个部件连接到一组公共信息传输线上，这种称为总线连接。
+
+总线是计算机目前各部分互联的构件，用来传递控制信号、地址信息、数据信息，总线已经发展成一个基本独立的功能组件
+
+
+
 #### 6.1.1 总线的基本概念
+
+计算机中各部件传输信息的通道称为总线
+
++ 分时：同一时间总线上只能传输一个部件的信息
++ 共享：各个部分可以相互交换信息
+
+1. 机械特性
+
+   表示的是总线的物理连接方式，包括根数、插头、引脚的排列形状
+
+2. 功能特性
+
+   描述每一根总线的功能如地址总线、数据总线，控制总线等
+
+3. 电气特性
+
+   每一根电信号的传递方向以及有效电平范围
+
+4. 时间特性
+
+   规定了在总线上所传输的信号在什么时间内有效
+
+分类：
+
+从应用上分可以分为计算机总线和工业总线，工业总线主要有CAN、DeviceNet、Interbus-S等
+
+计算机总线按结构层次分为三类
+
+一：CPU内部连接个寄存器级运算部件之间的总线称为内部总线
+
+二：CPU同内部如存储器、通道高速功能部件互相连接的总线称为系统总线
+
+三：CPU与系统内中、低速I/O设备之间的连接称为I/O总线或通信总线或外部总线
+
+从信息传递的物理结构来分可以分为并行和串行，在通信距离较远时需要采用串行，并行速度快
+
+
 
 #### 6.1.2 系统总线的结构
 
-#### 6.1.3 总线仲裁
+系统总线是CPU和其他高速部件之间互联的总线
+
+（1）单总线
+
+系统内所有部件连接到一条总线上，结构简单
+
+（2）多总线
+
+机器内部配置两组以上的总线，成本大，性能高
+
+
+
+#### 6.1.3 总线的主要性能指标
+
++ 基础性能指标
+
+  总线宽度
+
+  总线时钟频率
+
+  总线数据传输率
+
+  负载能力
+
++ 控制方式
+
+  总线定时
+
+  总线复用
+
+  总线控制方式
+
+1. 总线宽度：是指总线中数据总线的数量用bit（位）表示，与传输速率成正比
+2. 总线时钟频率：是中线中各种信号的定时标准，频率越高单位时间内传输的量越大
+3. 数据传输速率：用MB/s表示，数据传输速率=总线位宽（位）/8位x总线时钟频率（字节每秒）
+4. 负载能力：负载能力越强说明总线能带的外部设备越多
+5. 总线定时分为：同步定时和异步定时
+   + 同步定时是指总线上所有数据由统一的时钟周期
+   + 异步定时是指由信号发出的源头模块的特定信号决定
+6. 总线复用：是指地址总线和数据总线分时同时使用一条物理线路，提高利用率和优化设计
+7. 控制方式：并发工作控制、自动配置控制、总裁控制等
+
+
 
 #### 6.1.4 典型的总线标准
+
+总线标准是国际公布或推荐的标准，是各种不同部件组成计算机时必须遵守的规范。也称总线技术规范
+
+1. ISA（Industrial Standard Architecture）
+
+2. EISC（Extended Industrial Standard Architecture）
+
+3. PCI（Peripheral Commponent Interconnect）
+      + PCI的总线的频率为33MHz与CPU频率无关，宽度32位，可扩展到64位，传输速率在132~264MB/s
+      + PCI设计的目的之一就是降低系统成本，减小尺寸
+      + PCI中间有独特的中间缓存器，从而使PCI总线与处理器无关
+      + PCI是一种长期的总线标准支持扩展
+      + 内部设有存储器可以配置PCI部件
+
+4. PCI Express总线
+
+      是由Inter和IBM等公司退出取代PCI的新一标准
+
+
 
 ### 6.2 总线信息传输
 
 #### 6.2.1 总线的操作
 
+在总线通信过程中每次只能有一组信息传输，多组信息的传输需要按顺序分别进行
+
+在传输过程中发起者称为主部件或主设备，通信对象称为从部件或从设备，当需要通讯时需要主设备向总线管理机构发起申请，通过后可以将下一个周期的使用权给主设备如果还行继续使用还需要提出申请
+
+
+
 #### 6.2.2 信息传输方式
 
+（1）串行方式
+
+（2）并行方式
+
+
+
 #### 6.2.3 总线定时方式
+
+（1）同步定时
+
+（2）异步定时
+
+
 
 ### 6.3 总线仲裁
 
 #### 6.3.1 总线仲裁的概念
 
+计算机中连接到总线的功能模块有主动和被动两种形态，主动方可以启动一个总线周期，而被动方只能响应主方需求，每个总线周期只能有一个主方占用控制权但是可以有多个从方响应主方
+
+为了解决主方竞争控制权引入了中线仲裁的概念，添加总裁部件从多个主方请求中选取一个作为下次的总线使用的主方
+
+机器中常采用优先级和公平策略的方式进行仲裁，CPU模块的采用公平策略，而计算机中I/O设备的请求用优先级进行仲裁
+
+
+
 #### 6.3.2 总线仲裁方式
 
+（1）集中式仲裁
 
+集中式仲裁分为串行链接、定时查询、独立请求三种方式
+
++ 串行链接采用的是公共的总线请求
++ 仲裁器收到请求后让计数器进行计数，定时查询各个设备以确定是谁发出的请求
++ 独立请求的优点是总线分配速度快，但是需要的线路多
+
+（2）分布式仲裁
+
+每个主方设备都有自己的仲裁号，以优先级为基础与总线上的仲裁号和自己的仲裁号进行比较最后的保留在总线上，与集中式相比需要的控制电路更为复杂信号更多
+
+
+
+## 第七章 输入/输出系统
+
+### 7.1 外围系统
+
+#### 7.1.1 输入/输出设备概述
+
+#### 7.1.2 常用输入设备
+
+#### 7.1.2 常用输出设备
+
+### 7.2 输入/输出接口
+
+#### 7.2.1 常用输入设备
+
+#### 7.2.2 常用输入设备
+
+#### 7.2.3 常用输入设备
+
+### 7.3 输入/输出信息传送控制方式
+
+#### 7.3.1 常用输入设备
+
+#### 7.3.2 常用输入设备
+
+#### 7.3.3 常用输入设备
+
+#### 7.3.4 常用输入设备
 
