--- a/计算机组成原理.md
+++ b/计算机组成原理.md
@@ -1674,27 +1674,326 @@ ID：对IR中指令进行译码
 
 ### 7.1 外围系统
 
+计算机的输入输出系统也称为I/O系统，通常包括输入输出设备、I/O接口、和相关编程软件
+
+计算机的核心是CPU和主存储器但这些核心硬件还需配上各种外部设备才能进行人机交互
+
+外部设备的发展方向是低成本、小体积、高速、大容量、低功耗、智能化方面发展
+
+
+
 #### 7.1.1 输入/输出设备概述
+
+输入设备是人机交互的最重要的设备，输入设备的功能是将原始数据和处理这些数据的程序、命令通过输入接口输入到计算机中，由于数据信息多种多样所以输入设备也是多种多样的
+
+输出设备是将运算结果输出的设备
+
+
 
 #### 7.1.2 常用输入设备
 
+1. 键盘
+2. 鼠标
+
+
+
 #### 7.1.2 常用输出设备
+
+1. 显示器
+   + CRT显示器
+   + LCD显示器
+2. 打印设备
+
+
 
 ### 7.2 输入/输出接口
 
-#### 7.2.1 常用输入设备
+简称I/O接口位于主机与外设之间
 
-#### 7.2.2 常用输入设备
 
-#### 7.2.3 常用输入设备
+
+#### 7.2.1 I/O接口的基本功能
+
+I/O接口的种类十分多但基本功能都差不多
+
+1. 实现设备的选择
+2. 实现数据缓冲以达到速度匹配
+3. 传递控制命令和状态信息
+4. 信号转换
+
+
+
+#### 7.2.2 I/O接口电路的分类与基本组成
+
+1. 按通用性分类
+
+   + 通用接口
+   + 专用接口
+
+2. 按可编程分类
+
+   + 简单接口：仅完成数据缓冲、驱动等功能
+   + 可编程接口：可以通过指令功能并选择运行参数
+
+3. 按数据传输格式分类
+
+   + 并行传输
+   + 串行传输
+
+4. I/O接口的基本结构
+
+   主要由，数据端口、状态端口、控制端口、译码电路、控制逻辑电路、主机与接口以及接口与I/O接口之间的信号连接线组成
+
+
+
+#### 7.2.3 I/O端口的编址方式
+
+为了能使CPU选择设备并进行数据传输，一般在接口中都具有多个CPU进行访问的寄存器，称为输入输出端口
+
+1. 统一编制方式
+
+   将I/O端口当做内存来看待，I/O口占用的地址存储器就不能在次使用
+
+2. 独立编制方式
+
+   如存储器内存地址为00000H ~ FFFFFH而I/O端口为000H ~ FFFH相对独立但是需要专用的控制信号和I/O指令
+
+
 
 ### 7.3 输入/输出信息传送控制方式
 
-#### 7.3.1 常用输入设备
+#### 7.3.1 程序直接传送方式
 
-#### 7.3.2 常用输入设备
+完全通过程序进行控制主机与设备的通信数据传输
 
-#### 7.3.3 常用输入设备
+1. 无条件传送方式
 
-#### 7.3.4 常用输入设备
+   默认外设始终处于准备好的状态结构简单
 
+2. 程序查询传送方式
+
+   执行程序不断的检查外设的状态，根据外设的状态控制外设的输入/输出
+
+
+
+#### 7.3.2 程序中断传送方式
+
+由于CPU要不断的查询I/O状态，对于CPU的使用造成浪费
+
+1. 基本概念
+
+   中断：是指由于随机时间中断CPU正在执行的程序转而处理相应的事件
+
+   中断源：发生中断请求的来源，分为硬件中断（如故障）和软件中断（如程序调试）以及可屏蔽中断（INTR）、非屏蔽中断（NMI）等多种中断源
+
+   中断服务程序：为处理意外情况引起的中断的任务e而编写的程序
+
+   中断系统：实现中断功能的软硬件的总称，CPU配置中断机构，设备上配置中断接口，软件上设计中断程序
+
+   单级中断：执行中断时不能再被中断
+
+   多级中断（嵌套）：可以多级嵌套
+
+2. 中断方式的接口电路
+
+   硬件设置
+
+3. 中断方式的工作流程
+
+   （1）中断请求
+
+   中断源发出请求存入中断请求寄存器中
+
+   （2）中断响应
+
+   ①中断源请求中断
+
+   ②CPU允许中断
+
+   ③完成当前指令之后检查中断请求
+
+   ④机器无故障和DMA等优先级跟高的中断
+
+   （3）中断处理与返回
+
+   ①关中断
+
+   ②保存断点和程序状态字PSW
+
+   ③判断中断的优先级
+
+   ④保护现场
+
+   ⑤执行中断服务程序
+
+   ⑥关中断，恢复现场，断点，和原屏蔽字
+
+   ⑦开中断
+
+   ⑧中断返回
+
+4. 中断服务程序入口地址的获取方式
+
+   （1）向量中断方式
+
+   （2）非向量中断方式
+
+   CPU响应中断只产生一个固定地址，由此读取中断查询程序（中断服务总程序）的入口地址
+
+5. 中断优先级的设定原则、判别及优先级的调整
+
+   （1）优先级设定原则
+
+   按着紧迫性来定，机器故障最高，高速传输数据中DMA的申请高于低速设备，输入高于输出，但也需要根据实际情况来定
+
+   （2）优先级判断
+
+   在多个中断申请时CPU只能响应一个优先级最高的中断
+
+   （3）优先级的调整
+
+   ①响应优先级
+
+   ②处理优先级
+
+6. 中断系统的相关定量分析
+
+   假设中断系统响应中断需要50ns，总线中断服务程序需要150ns，其中60ns用于系统额外开销
+
+   最短的中断间隔=50+150=200ns，中断额外开销=50+60=110ns，最大中断频率=1÷200ns=5MHz
+
+   中断额外开销占中断时间的比例=110÷200=55%
+
+
+
+#### 7.3.3 直接存储器存取（DMA）方式
+
+DMA（Direct Memory Access）是在外设和主存储器之间由硬件组成的直接的数据传送通路，用于高速I/O设备与主存之间的成组数据传送，DMA不经过CPU
+
+1. MDA方式的工作原理
+
+   实际上是将外设和内存交换信息的控制与操作叫个DMA控制器（DMAC），当外设要进行数据传输时总线的控制权由CPU交给DMA，CPU可以进行其他工作但是不能访问总线，减小了CPU的开销
+
+2. MDA控制器的基本组成
+
+   DMA中包含多个设备寄存器、中断控制和DMA控制逻辑电路等
+
+   + 主存地址计数寄存器（MAR）
+   + 外围设备地址计数寄存器（ADR）
+   + 字计数器（WC）
+   + 控制于状态寄存器（CSR）
+   + 数据缓冲寄存器（DBR）
+   + 中断机构：当字计数器溢出（全为“0”）时，表示一批数据交换完成
+
+3. MDA的数据传送过程
+
+   （1）传送前预处理
+
+   由CPU先进行测设设备状态之后交由DMA进行控制
+
+   （2）数据传送
+
+   ①从外设读一个字到数据缓冲寄存器中DBR
+
+   ②向CPU发出DMA请求，在获取权限后，吧DBR的内容送往主存数据寄存器
+
+   ③将DMA中的MAR内容送人主存地址寄存器，启动写操作将数据写入主存
+
+   ④DMA的WC计数器内容减1，MAR内容加1
+
+   （3）传送结束后处理
+
+   若要继续传送则要多DMA进行初始化，若不需要则停止传送，若出错则转错误诊断程序及处理程序
+
+4. MDA的三种工作方式
+
+   （1）CPU暂停（独占总线）方式
+
+   主机响应DMA后让出总线，也称为成组连续传送方式，可以减少总线的控制权的转换次数
+
+   （2）CPU周期窃取（挪用）方式
+
+   在趁主存储器空闲时DMA占用（窃取）一个总线周期传送一个字，若与CPU发生总线争用，CPU需要让一个总线周期之后才能使用总线，也称为单字传送方式
+
+   （3）交替方式
+
+   当CPU的工作周期比主存访问时间长时，将CPU周期分为C1和C2两个周期，其中C1交给DMA，C2交给CPU访问主存，不需要申请总线的访问控制权限，这是标准的DMA工作方式如果需要同时访问总线，则DMA的优先级高于CPU
+
+5. MDA方式的特点
+
+   + 外设与CPU共享主存和总线
+   + DMA控制器直接管理数据块传送，主存地址的确定、传送数据的计数等都由硬件电路直接实现
+   + 主存中要开辟专用缓冲区，及时供给和接受外设的数据
+   + DMA传输速度快，CPU和外设机并行工作，提高了效率
+   + DMA在传送开始前要通过程序进行预处理，结束后要通过中断方式进行后处理
+
+6. DMA方式相关的定量分析
+
+   假设一个DMA接口，支持最大批量为400个字节，存取周期为0.2us，每处理一次中断需要5us，现在有字符设备传输率为9600b/s
+
+   9600b/s=1200B/s
+
+   用DMA方式CPU使用时间是0.2x1200+5x(1200/400)=255us
+
+   中断方式5x1200=6ms
+
+   所以对于数据传输速度有要求的外设采用DMA更为合适
+
+
+
+#### 7.3.4 I/O通道控制方式和外围处理机方式
+
+在大中型计算机中，由于外设多如果采用MDA方式会产生问题
+
+（1）要为外设配置较多的DMA控制器，增加硬件成本
+
+（2）要解决多个DMA控制器同时访问主存的冲突，控制复杂
+
+（3）采用DMA传送方式是众多外设直接由CPU进行初始化和后期管理控制会占用更多的CPU时间
+
+常采用
+
+1. I/O通道数据传送方式
+
+   I/O通道是计算机系统中替代CPU管理控制外设的独立部件是一种能执行有限I/O指令合集级通道命令的I/O处理机
+
+   在通道的控制方式下一台主机可以连接多个通道，一个通道可以连接多台I/O设备，这些设备可以是不同速度不同种类，增加了并行能力，通道通过执行通道程序对I/O系统的统一管理
+
+   （1）I/O通道的种类
+
+   ①字节多路通道
+
+   低速、分时，各个设备分时轮巡输出一个字节
+
+   ②选择通道
+
+   又称高速通道，在物理上可以连接多个设备，但是设备不能同时工作，在某一时间内通道只能选择一个设备
+
+   ③数组多路通道
+
+   将前两个结合，有多个子通道既可以并行又可以分时
+
+   （2）I/O通道的功能
+
+   + 接受CPU的指令
+   + 读取并执行通道程序
+   + 读取外设的状态信息：读取状态提交给CPU
+   + 发出中断请求：数据中断和故障中断
+
+   分担了计算机系统中全部或大部分I/O功能，提高了计算机的分散化程度
+
+   （3）I/O通道的工作过程
+
+   启动通道、数据传送、结束处理
+
+2. 外围处理机（PPU）方式
+
+采用通道的方式也存在不足，部分操作任然需要CPU进行
+
+（1）输入/输出处理机（IOP）
+
+IOP不独立于CPU工作，而是计算机的一个部件，IOP和CPU可以并行工作提高MDA的处理能力
+
+（2）外围处理机（PPU）
+
+外围处理机基本都独立于处理机工作，结构更接近于一般处理机，在巨型机中，常采用多台外围处理机
