--- a/小记.md
+++ b/小记.md
@@ -1,16 +1,24 @@
 bilibili
 
-1. 终端多多（视频做完未上传）
+1. 终端多多（22.10.18视频做完未上传）（22.10.19上传）
 
-2. gokcehan/lf
+2. gokcehan/lf（22.10.21录屏）
 
-3. neofetch
+3. neofetch（22.10.20上传）
 
-4. vimium c的edge
+4. vimium c的edge（）
 
    surfingkeys
 
-5. lldb和gdb
+5. lldb和gdb（）
+
+6. hexo主题（）
+
+7. hexo图片（22.10.20上传）（抖音没有）
+
+8. hexo教程（）
+
+9. win11资源管理器磨砂透明（22.10.20上传）（抖音未过审）
 
 
 
