--- a/美化草稿.md
+++ b/美化草稿.md
@@ -1017,3 +1017,23 @@ windows下的话直接用scoop安装就可以了就是不太好安装
 
 在终端显示软硬件信息和log还是挺有用的就是windows的话比较臃肿读取速度会慢一点
 
+
+
+
+
+
+
+# gokcehan/lf
+
+用过linux的肯定都知道在终端下有一个ranger的资源管理器
+
+找了好久windows下有没有类似的前两天终于在github上找到了lf
+
+和ranger类似但是有windows版的直接到github搜索即可
+
+在github上找到对应的系统的安装方法直接在终端中运行即可
+
+看看效果
+
+还是比较好用的
+
