--- a/小记.md
+++ b/小记.md
@@ -6,7 +6,7 @@ bilibili
 
 3. neofetch（22.10.20上传）
 
-4. vimium c的edge（）
+4. vimium c的edge（22.10.25 上传）
 
    surfingkeys
 
@@ -19,6 +19,8 @@ bilibili
 8. hexo教程（）
 
 9. win11资源管理器磨砂透明（22.10.20上传）（抖音未过审）
+
+10. powershell版本信息（22.10.26上传）
 
 
 
