--- a/美化草稿.md
+++ b/美化草稿.md
@@ -1037,3 +1037,25 @@ windows下的话直接用scoop安装就可以了就是不太好安装
 
 还是比较好用的
 
+
+
+
+
+# 谷歌翻译
+
+最近谷歌翻译使用不了了其实最开始九月份应该就是使用不了了，但是后来可以修改hosts文件，最近发现越来越不稳定了
+
+![image-20221027220121325](assets/image-20221027220121325.png)
+
+经常就停止了
+
+反应非常慢，所以今天换一种，其实特别简单，edge和谷歌的内核是一样的而且微软的翻译其实也挺好使的所以直接用edge就行了😂
+
+在页面右键直接翻译成中文
+
+![image-20221027220302323](assets/image-20221027220302323.png)
+
+各种bug
+
+都不用安装插件
+
