--- a/小记.md
+++ b/小记.md
@@ -22,5 +22,20 @@ bilibili
 
 10. powershell版本信息（22.10.26上传）
 
+11. 摸鱼神器VS022（22.11.3上传）
 
+12. windows更改为utf-8（上传）
 
+13. powershell历史命令自动补全
+14. 搜狗输入法（上传）
+15. 搜狗输入法升级（22.11.10上传）
+
+16. figlet（）
+17. cowsay（)
+18. 爱心（22.11.8上传）
+19. keyiz（）
+20. snipaste（）
+21. 青柠起始页插件（）
+22. neovim-checkhealth（）
+23. 爱心代码李珣同款（22.11.12上传）
+24. 多桌面操作（）
