--- a/美化草稿.md
+++ b/美化草稿.md
@@ -1059,3 +1059,56 @@ windows下的话直接用scoop安装就可以了就是不太好安装
 
 都不用安装插件
 
+
+
+
+
+
+
+# utf-8格式
+
+编程的时候经常会使用到utf-8的格式，但是windows默认用的并不是utf-8（10,11好像已经支持了），主要是utf-8的跨平台兼容性比较好，
+
+今天来说一下用记事本转换格式
+
+nvim的默认也是utf-8
+
+找到一个utf-8的文件用记事本打开就行
+
+可以看到右下角是utf-8的格式
+
+另存为之后就可以选择编码格式了
+
+可以看见保存之后就是ansi的格式了
+
+同理也可以吧ansi的改为utf-8
+
+从win10开始（应该是）windows开始支持utf-8了可以直接在设置中把默认的编码格式改为utf-8
+
+在设置中找到区域设置
+
+![image-20221103140418481](assets/image-20221103140418481.png)
+
+打开utf-8就行需要重启一下之后默认用的就都是utf-8的编码格式啦
+
+
+
+
+
+
+
+
+
+# 搜狗输入法美化（皮肤）
+
+推荐两个皮肤
+
+1. widows 7 aero
+   + 黑
+   + 白
+
+2. 精睿会员
+
+3. win7 style
+
+   
