--- a/小记.md
+++ b/小记.md
@@ -32,10 +32,12 @@ bilibili
 
 16. figlet（）
 17. cowsay（)
-18. 爱心（22.11.8上传）
-19. keyiz（）
-20. snipaste（）
-21. 青柠起始页插件（）
-22. neovim-checkhealth（）
-23. 爱心代码李珣同款（22.11.12上传）
-24. 多桌面操作（）
+18. btop（）
+19. 爱心（22.11.8上传）
+20. keyiz（22.11.17上传）
+21. snipaste（）
+22. 青柠起始页插件（）
+23. neovim-checkhealth（）
+24. 爱心代码李珣同款html（22.11.12上传）
+25. 多桌面操作（）
+26. 爱心代码4python的（已上传）
