--- a/美化草稿.md
+++ b/美化草稿.md
@@ -1112,3 +1112,24 @@ nvim的默认也是utf-8
 3. win7 style
 
    
+
+
+
+# 按键显示工具--keyviz
+
+好多兄弟问我windows terminal的一些快捷键，找了好几款
+
+个人觉得keyviz是**最好看**的了
+
+一个在github的开源项目自己官网下载就行
+
+安装方式看个人喜好我用的便携式\基本没啥区别
+
+下载好后之后双击运行即可
+
+github有点慢正常下载运行即可
+
+可以参考一下设置
+
+看看效果
+
