--- a/小记.md
+++ b/小记.md
@@ -32,12 +32,20 @@ bilibili
 
 16. figlet（）
 17. cowsay（)
-18. btop（）
+18. btop（22.11.18上传）
 19. 爱心（22.11.8上传）
 20. keyiz（22.11.17上传）
 21. snipaste（）
-22. 青柠起始页插件（）
+22. 青柠起始页插件（22.11.30上传）
 23. neovim-checkhealth（）
 24. 爱心代码李珣同款html（22.11.12上传）
 25. 多桌面操作（）
 26. 爱心代码4python的（已上传）
+27. vim翻译插件（22.11.21上传）
+28. hack.chat/? (22.12.06上传)
+29. carnac（22.12.3上传）
+30. wox效率工具-快速启动器（）
+31. 大多数（）
+32. superwt（22.12.11 抖音上传，22.12.12bilibili）
+33. sl（22.12.16上传）
+34. lolcat（）
