--- a/美化草稿.md
+++ b/美化草稿.md
@@ -1133,3 +1133,132 @@ github有点慢正常下载运行即可
 
 看看效果
 
+
+
+
+
+# neovim翻译插件
+
+xiyaowong/nvim-transparent
+
+看看效果
+
+
+
+
+
+# neovim的跳转插件
+
+有两个一个
+
+flit.nvim
+
+还有一个
+
+hop.nvim
+
+先看第一个f
+
+第二个是单词调转
+
+
+
+
+
+# 青柠起始页的edge插件
+
+青柠起始页可以自定义背景但是只能是图片
+
+动态壁纸的话必须要下载插件才能用
+
+其实更改之后再关闭插件也可以用的
+
+下载好插件更改完之后吧插件关了就行动态背景还在
+
+
+
+
+
+# snipaste一个截图软件
+
+and QQ的截图
+
+snipaste是一个截图软件
+
+可以F1一键截图F3钉在桌面上
+
+非常方便
+
+其实qq也可以改一下快捷键就行
+
+改为F1即可
+
+也可以钉在桌面上
+
+而且可以翻译什么的
+
+图片转文字什么的
+
+就是qq比snipaste占内存
+
+看个人需求
+
+
+# 按键可视化工具carnac
+
+前两天处了一个keyviz的工具
+
+有兄弟说keyviz没有历史记录
+
+我觉得keyviz就是用来显示快捷键的所以显示一下就好了，历史不历史没啥用
+
+但是每个人需求不一样吧所以想要有历史的可以用这个经典的carnac
+
+直接下载就行非常小
+
+第一次运行的时候会报错不用管它点击调试就行了，点击调试会进入设置里面
+
+位置包括字体颜色大小背景颜色都可以改
+
+但是不能单独显示shitf和alt单独按没有用可以按Alt+
+
+个人觉得没有keyviz花里胡哨
+但是特别小只有几兆，可以看一下
+差了二十倍吧反正都不大
+
+看个人需求需要注重快捷键的就用keyviz
+想要记录的就carnac
+
+当然也可以成年人不做选择
+
+两个都用
+
+
+
+
+
+
+
+
+
+# 一个有意思的匿名聊天网站hack.chat
+
+可以多人线上匿名聊天
+
+关闭后不会留下聊天记录
+
+不支持留言必须同时在线
+
+可以自定义房间名称
+
+比如https://hack.chat/?test
+
+?后面的自己随便写
+
+复制在浏览器中打开就可以了
+
+进入的时候随便输入一个什么昵称就行
+
+关闭之后就没有记录了
+
+可以和你的小对象。。。。。
